src/test/deca/context/invalid/created/decl_class/new_class_incompatible_type_defaut.deca
// Description :
//    creation d'un objet incompatible avec le type int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11 :(3.28) Les types int et A sont incompatibles pour l’affectation

class A{
}

{
int a = new A();
}
